--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -22,7 +22,7 @@ section.xblock-wrapper {
     border-bottom: 1px solid $gray-l4;
     border-radius: $baseline/5;
     border-radius: $baseline/5 $baseline/5 0 0;
-    background-color: $gray-l6;
+    background-color: $blue-l5;
 
     .header-details {
       display: inline-block;
