--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -22,7 +22,7 @@
     data-show-captions="${show_captions}"
     data-general-speed="${general_speed}"
     data-speed="${speed}"
-    data-position="${position}"
+    data-saved-video-position="${saved_video_position}"
     data-start="${start}"
     data-end="${end}"
     data-caption-asset-path="${caption_asset_path}"
